# TokenSage-CLI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-TW.md  pyproject.toml  setup.py
examples/: basic_usage.py
src/tokensage/: __init__.py  __main__.py  cli.py  compress.py  proxy.py  router.py  stats.py  tui.py  utils.py  wrap.py
src/tokensage/compressors/: __init__.py
tests/: __init__.py  test_cli.py  test_cn_optimizer.py  test_compress.py  test_compressor.py  test_cost_calculator.py  test_token_counter.py
tokensage/: __init__.py  __main__.py  cli.py  cn_optimizer.py  compressor.py  config_manager.py  cost_calculator.py  exceptions.py  history.py  proxy_mode.py  token_counter.py  tui_dashboard.py  utils.py
tokensage/models/: __init__.py  compression.py  pricing.py
