[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tokensage-cli"
version = "0.1.0"
description = "Lightweight Terminal AI Token Compression & Cost Optimization Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "TokenSage Team"},
]
keywords = ["llm", "token", "compression", "cost-optimization", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Text Processing",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
rich = ["rich>=13.0.0"]

[project.scripts]
tokensage = "tokensage.cli:main"

[tool.setuptools]
packages = ["tokensage", "tokensage.models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
